--- a/assets/scss/module/_header.scss
+++ b/assets/scss/module/_header.scss
@@ -3,8 +3,8 @@ header {
 	display: flex;
 	justify-content: flex-start;
 	align-item:right;
-	z-index: 2;
-	position: relative;
+	z-index: 4;
+	position: absolute;
 
 	.logo, a {
 		height: 100%;
